--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       KSQL_KSQL_LOGGING_PROCESSING_STREAM_AUTO_CREATE: "true"
       KSQL_KSQL_LOGGING_PROCESSING_TOPIC_AUTO_CREATE: "true"
       KSQL_KSQL_STREAMS_COMMIT_INTERVAL_MS: 100
+      KSQL_KSQL_IDLE_CONNECTION_TIMEOUT_SECONDS: 600
 
   ksqldb-cli:
     image: confluentinc/ksqldb-cli:latest
