updates to UI config

--- a/.env
+++ b/.env
@@ -1,20 +1,14 @@
 # Kafka config
 PROJECT_NAME=phone_stream_producer
-TOPIC_NAME=raw-phone-stream
+TOPIC_NAME=smartphone-sensor-data
 KAFKA_HOST=kafka
 KAFKA_PORT=9092
 
-# Questdb config
-DB_USER=admin
-DB_PASSWORD=quest
-DB_HOST=questdb
-DB_PORT=8812
-DB_IMP_PORT=9000
-DB_NAME=qdb
-DB_TRIAXIAL_OFFLOAD_TABLE_NAME=device_offload
+# KSQL Config
+STREAM_NAME=smartphone_sensor_stream
+KSQL_HOST=http://host.docker.internal
+KSQL_PORT=8088
 
 # Application config
-UI_PORT=5000
-
-# Misc config
-PHONE_SAMPLE_RATE=50
+UI_BACKEND_HOST=http://localhost
+UI_BACKEND_PORT=5000
